Improved edit option dialog layout.